[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
description = "Atomic polyfills, for targets where they're not available."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "atomic-polyfill"
readme = "README.md"
repository = "https://github.com/embassy-rs/atomic-polyfill"
version = "0.1.9"

categories = [
  "embedded",
  "no-std",
  "concurrency",
]

[dependencies]
critical-section = "0.2.7"
